Tidy up comments for other parsing methods